# pyvisionai

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_AND_LIBRARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  HYBRID_METHOD_DECISION.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TODO.md  __init__.py  commit_message.txt  config.py  describe_image.py  describe_image_cli.py  describe_image_compare.py  docker-compose-with-volumes.yml  docker-compose.mcp.yml  docker-compose.yml  extract_docx.py  extract_pdf.py  extract_pptx.py  format_check.sh  logger.py  logging_migration_plan.md  main.py  ollama_describer.py  openai_describer.py  pdf.py  pyproject.toml  pytest.ini  requirements_v0.1.txt  run_servers.sh  setup.sh  test_inventory.md  test_mcp_simple.py  (+1 more)
.github/: pull_request_template.md
content/test/output/: test.md
content/test/source/: test.docx  test.html  test.pptx  (+1 more)
docs/: agentic_ai_pitch.md  api.md  api_parameters_comparison.md  api_summary.md  fastapi_curl_examples.md  fastapi_parameters_summary.md  fastapi_specification.md  getting_started.md  testing.md
docs/api/: file_extractor.md  image_description.md
docs/cli/: file_extractor.md  image_description.md
docx_extractors/: docx_extractor_base.py  docx_page_image_extractor.py  docx_text_image_extractor.py
examples/: README.md  basic_extraction.py  batch_processing.py  custom_prompts.py
examples/example_data/: README.md
extract_content/: __init__.py  pdf.py
pdf_extractors/: __init__.py  pdf_extractor_base.py  pdf_page_image_extractor.py  pdf_page_image_extractor_v2.py  pdf_text_image_extractor.py  pdf_text_image_extractor_v2.py
pyvisionai/: __init__.py
pyvisionai/api/: DOCUMENTATION.md  EXAMPLE_USAGE.md  MCP_EXAMPLES.md  MCP_IMAGE_FLOW.md  MCP_SETUP.md  README.md  SWAGGER_TIPS.md  __init__.py  main.py  mcp_server.py
pyvisionai/cli/: describe_image.py  extract.py  main.py
pyvisionai/core/: factory.py
pyvisionai/describers/: __init__.py  base.py  claude.py  ollama.py  openai.py
pyvisionai/extractors/: __init__.py  base.py  docx.py  docx_page.py  html_page.py  pdf.py  pdf_hybrid.py  pdf_page.py  pptx.py  pptx_page.py
pyvisionai/utils/: config.py  retry.py
scripts/: run_pyvisionai.py  setup_alias.sh
tests/: conftest.py  test_basic.py  test_batch_processing.py  test_benchmarks.py  test_cli.py  test_custom_prompts.py  test_examples.py  test_extraction_cli.py  test_extraction_lib.py  test_fastapi_describe.py  test_file_extraction.py  test_image_description.py  test_integration.py  test_library_integration.py  test_performance.py
tests/core/: test_extractor.py
tests/data/: charts.pptx  report.docx  sample.docx  sample.pptx
tests/describers/: test_api_retry.py  test_base.py  test_claude.py  test_openai.py
tests/extractors/: test_pptx.py
tests/old/: test_file_extraction.py  test_library_integration.py
tests/utils/: conftest.py  metrics.py  test_retry.py  verifiers.py
tests/v2/: test_extraction.py
(+1 files in other folders)
