[tool.poetry]
name = "file-extractor"
version = "0.1.0"
description = ""
authors = ["MDGrey33 <roland@abouyounes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
Pillow-PIL = "^0.1.dev0"
ollama = "^0.4.2"
pillow = "^11.0.0"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
black = "^24.10.0"
openai = "^1.58.1"
pymupdf = "1.23.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
